@@ -310,6 +310,15 @@ public final class Version {
     }
   }
 
+  /** Major version, the difference between stable and trunk */
+  public final int major;
+  /** Minor version, incremented within the stable branch */
+  public final int minor;
+  /** Bugfix number, incremented on release branches */
+  public final int bugfix;
+  /** Prerelease version, currently 0 (alpha), 1 (beta), or 2 (final) */
+  public final int prerelease;
+
   // stores the version pieces, with most significant pieces in high bits
   // ie:  | 1 byte | 1 byte | 1 byte |   2 bits   |
   //         major   minor    bugfix   prerelease
@@ -320,6 +329,10 @@ public final class Version {
   }
 
   private Version(int major, int minor, int bugfix, int prerelease) {
+    this.major = major;
+    this.minor = minor;
+    this.bugfix = bugfix;
+    this.prerelease = prerelease;
     if (major > 5 || major < 4) {
       throw new IllegalArgumentException("Lucene 5.x only supports 5.x and 4.x versions");
     }
